screen sizes fixed

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </div>
     </main>
 
+    <!-- Mobile Filter Toggle Button (Backup) -->
+    <button id="mobileFilterToggleBackup" style="display: none; position: fixed; bottom: 20px; right: 20px; background: #3b82f6; color: white; width: 56px; height: 56px; border-radius: 50%; border: none; font-size: 24px; z-index: 9999; box-shadow: 0 4px 12px rgba(0,0,0,0.15);" title="Toggle Filters">
+        🔧
+    </button>
+
     <!-- Modular JavaScript Files -->
     <script src="js/component-loader.js"></script>
     <script src="js/map-handler.js"></script>
